add local docker dev server and php conf

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,6 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-15}-alpine
     environment:
@@ -11,11 +10,19 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-app}
     volumes:
       - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+    networks:
+      - biblio_network
+  app:
+    build: ./docker/
+    volumes:
+      - ./:/var/www/html
+    depends_on:
+      - database
+    networks:
+      - biblio_network
+
+networks:
+  biblio_network: {}
 
 volumes:
-###> doctrine/doctrine-bundle ###
   database_data:
-###< doctrine/doctrine-bundle ###
