--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
       - biblio_network
   app:
     build: ./docker/
+    ports: ['80:80']
     volumes:
       - ./:/var/www/html
     depends_on:
